# magicalimport

./: .travis.yml  CHANGES.txt  Makefile  README.md  README.rst  pyproject.toml  setup.py
.github/workflows/: ci.yml
examples/: Makefile  main.py
examples/00deep/: main.py
examples/01as/: main.py
examples/02here/: main.py
examples/02should-be-same/: commands.py  main.py  output.txt
examples/02should-be-same/app/: di.py
examples/03relative/: config.py  main.py
examples/03relative-import/: main.py  output.txt
examples/03relative-import/conf/: __init__.py
examples/04relative-nested/: main.py  output.txt
examples/04relative-nested/app/: config.py
examples/04relative-relative/: main.py  output.txt
examples/04relative-relative/conf/: __init__.py
examples/04relative-relative/conf/sub/: __init__.py  hello.py
examples/04syspath/: main.py
examples/05many-here/: main.py
examples/05many-here/conf/: __init__.py  current.py  leaf.py
examples/05many-here/conf/left/: __init__.py
examples/06here/: config.py  here_is_cwd.py  here_is_file.py  here_is_none.py  output.here_is_cwd.txt  output.here_is_file.txt
magicalimport/: __init__.py  compat.py
magicalimport/tests/: test_it.py  test_notfound.py
