[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "magicalimport"
dynamic = ["version"]
description = "importing a module by physical file path"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT License" }
authors = [
    { name = "podhmo", email = "ababjam61+github@gmail.com" }
]
keywords = ["import", "physical address", "file path"]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/podhmo/magicalimport"

[tool.hatch.version]
path = "magicalimport/__version__.py"

[tool.hatch.build.targets.sdist]
exclude = [
    ".github",
    "examples",
]
[tool.hatch.build.targets.wheel]
packages = ["magicalimport"]

[tool.hatch.envs.default]
dependencies = [
  "pytest",
]
[tool.hatch.envs.default.scripts]
test = "pytest"
